# holiday_bot

./: .env  .env_example  .gitignore  Cargo.toml  Procfile  README.md  docker-compose.yml  memo
code/holiday_bot/: .env_example  Cargo.toml  Procfile  Rocket.toml
code/holiday_bot/migrations/2020-06-10-062211_create_user_table/: up.sql
code/holiday_bot/migrations/2020-06-26-074724_cretae_test_table/: down.sql  up.sql
code/holiday_bot/migrations/2020-07-03-052535_create_public_holiday_table/: down.sql  up.sql
code/holiday_bot/src/: main.rs  routes.rs  schema.rs  test_models.rs
code/holiday_bot/src/controllers/: holiday.rs  mod.rs  push.rs  reply.rs
code/holiday_bot/src/models/: holiday.rs  line.rs  mod.rs
code/holiday_bot/src/utils/: auth.rs  holiday.rs  mod.rs
mysql/: dockerfile
mysql/init/: 1_init.sql  init.sql
nginx/: default.conf  dockerfile
rust/: .bashrc  dockerfile
src/: controllers.rs  main.rs  models.rs  public_holidays.rs  routes.rs
src/controllers/: mod.rs  push.rs  reply.rs
src/utils/: holiday.rs
