[package]
name = "holiday_bot"
version = "0.1.0"
authors = ["hota822 <hota822@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
# if you want Serde, use below
# chrono = { version = "0.4", features = ["serde"]}
rocket = "0.4.5"

