[package]
name = "holiday_bot"
version = "0.1.0"
authors = ["hota822 <hota822@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
# if you want Serde, use below
# chrono = { version = "0.4", features = ["serde"]}
rocket = "0.4.5"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
diesel_migrations = "1.3"
diesel = { version = "1.4.4", features = ["sqlite", "r2d2"] }
dotenv = "0.15.0"


[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["diesel_sqlite_pool"]

[global.databases]
sqlite_logs = { url = "/path/to/database.sqlite" }