[package]
name = "holiday_bot"
version = "0.1.0"
authors = ["hota822 <hota822@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
rocket = "0.4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
diesel_migrations = "1.3"
diesel = { version = "1.4.4", features = ["sqlite", "r2d2"] }
dotenv = "0.15.0"

# どっちか使う
# line-messaging-api-rust = { git = "https://github.com/hota822/line-messaging-api-rust.git" }
line-messaging-api-rust = { path = "../line-messaging-api-rust" }




[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["diesel_sqlite_pool"]

[global.databases]
sqlite_logs = { url = "./db/log.sqlite" }